# django-cognito-m2m

./: .coverage  .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
demo/: .autoenv  .autoenv.leave  README.md  pyproject.toml
demo/.aidex/: index.db
demo/demo/: settings.py  urls.py
demo/demo/core/: apps.py  serializers.py  tests.py  urls.py  views.py
demo/scripts/: api_smoke.py
django_cognito_m2m/: __init__.py  admin.py  apps.py  authenticator.py  conf.py  exceptions.py  models.py  principal.py  responses.py  tracker.py  typing.py  user_mapping.py  utils.py  validator_adapter.py
django_cognito_m2m/django/: __init__.py  decorators.py  middleware.py  mixins.py
django_cognito_m2m/drf/: __init__.py  authentication.py  mixins.py  permissions.py
django_cognito_m2m/migrations/: 0001_initial.py
tests/: __init__.py  fake_m2m.py  settings.py  support.py  test_authenticator.py  test_django_integration.py  test_drf.py  test_tracking.py  test_user_mapping.py  urls.py
